[package]
name = "esp_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-hal = { version = "0.16.0", features = [  ] }
esp-println = { version = "0.9.0", features = [] }
esp-wifi = { version = "0.4.0", features = [
    "phy-enable-usb",
    "utils",
    "wifi-default",
    "smoltcp",
    "dhcpv4",
    "ble",
    "embedded-svc"
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
